--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+appstarter.application.url = http://localhost:8080
+
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes = true
